# SCproj

./: .gitignore  CMakeLists.txt  main.cpp
MPIBasics/: CMakeLists.txt  Run.sh  Timer.h  main.cpp
MPIBasics/include/: MyMpi.h
MPIBasics/src/: MyMpi.cpp  main.cpp
MPI_prod_cons/: CMakeLists.txt  Configuration.sh
MPI_prod_cons/include/: BlockingMPI.h  Consumer.h  Producer.h  ProducerConsumerMPI.h  Timer.h  interfaceMPI.h  types.h
MPI_prod_cons/src/: BlockingMPI.cpp  Consumer.cpp  Producer.cpp  ProducerConsumerMPI.cpp  interfaceMPI.cpp  main.cpp
Threads/: CMakeLists.txt  main.cpp
producent_konsument/: CMakeLists.txt  Consumer.cpp  Consumer.h  Producer.cpp  Producer.h  Queue.h  Timer.cpp  Timer.h  main.cpp
producent_konsument/include/: Consumer.cpp  Consumer.h  Producer.cpp  Producer.h  Queue.h  types.h
